--- a/dataset.yaml
+++ b/dataset.yaml
@@ -1,8 +1,17 @@
+sample_print:
+  template: "templateInput/sample_dataset"
+  userdata: "userInput/sample_data/sample_print/userData"
+  dynamicDataYamlFile: "userInput/sample_data/sample_print/userData/dynamicData.yaml"
+  medium: "PRINT"
+  ogTitle: "Praveen Kumar's Weberon"
+  ogDescription: "Company"
+  ogImage: ""
+
 sample_web:
   template: "templateInput/sample_dataset"
-  userdata: "userInput/sample_data/sample_print"
-  dynamicDataYamlFile: "userInput/sample_data/sample_print/userData/dynamicData.yaml"
+  userdata: "userInput/sample_data/sample_web/userData"
+  dynamicDataYamlFile: "userInput/sample_data/sample_web/userData/dynamicData.yaml"
   medium: "WEB"
-  ogTitle: ""
-  ogDescription: ""
+  ogTitle: "Praveen Kumar's Weberon"
+  ogDescription: "Company"
   ogImage: ""
