--- a/userInput/sample_data/sample_web/userData/dynamicData.yaml
+++ b/userInput/sample_data/sample_web/userData/dynamicData.yaml
@@ -2,5 +2,12 @@ first_name : Praveen
 last_name : Kumar
 tel: "+19254527483"
 email : praveen@weberealty.com
-hb_month: "January"
-hb_year: "2023"
+cin: U72200KA1997PTC023081
+type: Unlisted Private Company
+revenue: Undisclosed
+sub-category: Non-govt-company
+industry: Computer Related Services
+founded: 27 November, 1997
+authorized_capital: $10,000 to $100,000
+category: Company Limited by Shares
+address: NO. 24, 4th Cross Road, 8th Main Road, Byrasandra Layout, Jayanagar, First Bloack East Bangalore Bangalore-560011 Karnataka- India
