"change font size"

--- a/userInput/sample_data/sample_print/userData/dynamicData.yaml
+++ b/userInput/sample_data/sample_print/userData/dynamicData.yaml
@@ -6,8 +6,8 @@ cin: U72200KA1997PTC023081
 type: Unlisted Private Company
 revenue: Undisclosed
 sub-category: Non-govt-company
-industry: Computer Related Services
+industry: Computer Services
 founded: 27 November, 1997
 authorized_capital: $10,000 to $100,000
-category: Company Limited by Shares
-address: Bangalore Karnataka- India
+category: Company 
+address: Bangalore
