[MW-2024-01][Web and Print][Dataset.yaml update]

--- a/dataset.yaml
+++ b/dataset.yaml
@@ -15,4 +15,19 @@ sample_web:
   ogTitle: ""
   ogDescription: ""
   ogImage: ""
-  
+
+marketwatch_202401:  
+  template: "templateInput/mw-gen-010509"
+  userdata: "userInput/2024-mw/mw-202401-web"
+  medium : "WEB"
+  ogTitle: "Praveen Kumar's Marketwatch January 2024"
+  ogDescription: "Real Estate News"
+  ogImage: "${targetdomain}/images/og/marketwatch_banner.jpg"
+
+marketwatch_202401_print:  
+  template: "templateInput/mw-gen-010509-print"
+  userdata: "userInput/2024-mw/mw-202401-print"
+  medium : "PRINT"
+  ogTitle: "Praveen Kumar's Marketwatch January 2024"
+  ogDescription: "Real Estate News"
+  ogImage: "${targetdomain}/images/og/marketwatch_banner.jpg"  
